--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -32,7 +32,7 @@ body{
     align-items: center;
     justify-content: center;
     /* background-image: linear-gradient(188deg, #95cfff 0%-60%, transparent 80%); */
-    background-image: url("../img/rm119batch4-adj-22-leavesframe.jpg");
+    background-image: url("img/rm119batch4-adj-22-leavesframe.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
